fixed overflow promplem - I hope

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 	width: 100%;
 	background-color: #dbdbdb;
 	font-family: 'Open Sans', sans-serif;
-	overflow-x: hidden;
+	overflow-x: none;
 }
 
 .container {
